--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ android {
     }
     signingConfigs {
         releaseSigningConfig {
-            storeFile rootProject.file("app/appcenter.keystore")
-            // storeFile rootProject.file("app/lz233_key.jks")
-            //storePassword System.getProperty("KEYSTORE_PASSWORD")
-            storePassword System.getenv("IVAN")
-            keyAlias System.getenv("IVAN")
-            keyPassword System.getenv("IVAN")
+            // storeFile rootProject.file("app/appcenter.keystore")
+            // // storeFile rootProject.file("app/lz233_key.jks")
+            // //storePassword System.getProperty("KEYSTORE_PASSWORD")
+            // storePassword System.getenv("IVAN")
+            // keyAlias System.getenv("IVAN")
+            // keyPassword System.getenv("IVAN")
         }
     }
     buildTypes {
