--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,16 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //multiDexEnabled true
     }
-    signingConfigs {
-        releaseSigningConfig {
-            // storeFile rootProject.file("app/appcenter.keystore")
-            // // storeFile rootProject.file("app/lz233_key.jks")
-            // //storePassword System.getProperty("KEYSTORE_PASSWORD")
-            // storePassword System.getenv("IVAN")
-            // keyAlias System.getenv("IVAN")
-            // keyPassword System.getenv("IVAN")
-        }
-    }
+    // signingConfigs {
+    //     releaseSigningConfig {
+    //         // storeFile rootProject.file("app/appcenter.keystore")
+    //         // // storeFile rootProject.file("app/lz233_key.jks")
+    //         // //storePassword System.getProperty("KEYSTORE_PASSWORD")
+    //         // storePassword System.getenv("IVAN")
+    //         // keyAlias System.getenv("IVAN")
+    //         // keyPassword System.getenv("IVAN")
+    //     }
+    // }
     buildTypes {
         release {
             minifyEnabled true
